# dcEmb-examples

./: CMakeLists.txt  README.md
include/: utility.hh
include/3body/: dynamic_3body_model.hh
include/COVID/: DEM_COVID.hh  dynamic_COVID_model.hh
include/tests/: dynamic_COVID_model_test.hh
include/weather/: DEM_weather.hh  dynamic_weather_model.hh  species_struct.hh
src/: utility.cc
src/3body/: DEM_3body.cc  dynamic_3body_model.cc
src/COVID/: DEM_COVID.cc  dynamic_COVID_model.cc
src/weather/: DEM_weather.cc  dynamic_weather_model.cc
tests/: dynamic_3body_model_test.cc  dynamic_weather_model_test.cc  serialization_test.cc
